feat: Implement Paper Brigadier command-api in CommandHandler and add papermc-docs to gitignore